<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.eclipse.tradista.app</groupId>
		<artifactId>parent</artifactId>
		<version>${parent.version}</version>
		<relativePath>../tradista-parent</relativePath>
	</parent>
	<groupId>org.eclipse.tradista.core</groupId>
	<artifactId>core-gui</artifactId>
	<version>${core-gui.version}</version>
	<dependencies>
		<dependency>
			<groupId>org.eclipse.tradista.core</groupId>
			<artifactId>core-gui-common</artifactId>
			<version>${core-gui-common.version}</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>